# zed

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: windows-beta.yaml
.github/workflows/: ci.yml  perf-gates.yml  release-windows.yml  symbols.yml
bench/windows/: Cargo.toml
bench/windows/src/: lib.rs  open_latency.rs  watcher_throughput.rs
crates/askpass/: Cargo.toml
crates/askpass/src/: askpass.rs  windows_pipe.rs
crates/auto_update/: Cargo.toml
crates/auto_update/src/: auto_update.rs  platform.rs  windows.rs
crates/auto_update_helper/: Cargo.toml
crates/auto_update_helper/src/: auto_update_helper.rs  windows.rs
crates/collab/: Cargo.toml
crates/collab/src/: lib.rs  rpc.rs  windows.rs
crates/collab/tests/: collab_tls.rs
crates/crashops/: Cargo.toml
crates/crashops/src/: lib.rs  windows.rs
crates/extension_host/: Cargo.toml
crates/fs/: Cargo.toml
crates/fs/src/: fs.rs  fs_watcher.rs  windows_paths.rs
crates/fs/tests/: watcher_stress.rs
crates/git/: Cargo.toml
crates/git/src/: git.rs  repository.rs  windows.rs
crates/git/tests/: git_windows.rs
crates/gpui/: Cargo.toml
crates/gpui/examples/: win_smoke.rs
crates/gpui/src/platform/: windows.rs
crates/media/: Cargo.toml
crates/media/src/: media.rs  windows_audio.rs
crates/node_runtime/: Cargo.toml
crates/node_runtime/examples/: ensure_node.rs
crates/node_runtime/src/: node_runtime.rs  windows_support.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs
crates/platform/src/windows/: single_instance.rs
crates/platform/tests/: ipc_race.rs
crates/telemetry/src/: telemetry.rs
crates/terminal/src/: terminal.rs  windows_lifecycle.rs
crates/util/: Cargo.toml
crates/util/src/: util.rs  windows_shell_adapters.rs
crates/zed/: Cargo.toml
crates/zed_cli/: Cargo.toml
crates/zed_cli/src/: first_run.rs  lib.rs
docs/: faq-windows.md  get-started-windows.md  privacy.md
docs/windows/: README.md  collaboration.md  crashops.md  git.md  ipc.md  logs.md  perf.md  rc-checklist.md  release.md  shell-node.md  troubleshooting.md  ui-smoke.md  update-flow.md  watcher-smoke.md
qa/windows/: git.ps1  media.ps1  perf.ps1  sanity.ps1
scripts/win/: build.ps1  collect-logs.ps1  package.ps1  proxy-test.ps1  setup.ps1  sign.ps1  verify.ps1
tests/: updater_rc.rs
website/downloads/: index.md
(+8 files in other folders)
