[package]
name = "crashops"
version = "0.1.0"
edition.workspace = true
publish = false
license = "GPL-3.0-or-later"

[features]
default = []
win-crashops = ["dep:anyhow", "dep:log"]

[dependencies]
anyhow = { workspace = true, optional = true }
log = { workspace = true, optional = true }
serde_json.workspace = true
telemetry = { workspace = true }
workspace-hack.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, optional = true, features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ErrorReporting",
] }

[target.'cfg(target_os = "windows")'.features]
win-crashops = ["dep:windows"]
